--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ ol > li::marker {
 }
 
 td {
-  padding: 12px 0;
+  padding: 12px 0 12px 32px;
   border-bottom: 1px solid var(--stone-150);
 }
 
@@ -161,6 +161,7 @@ td {
 .nutrition-detail {
   color: var(--brown-800);
   font-weight: bold;
+  padding-left: 16px;
 }
 
 .attribution {
